update whole project